# camerondurham.github.io

./: .editorconfig  .gitignore  .gitmodules  404.html  CNAME  Cargo.toml  Gemfile  NEXTJS_MIGRATION_PLAN.md  README.md  README_LEPTOS.md  ROADMAP.md  Trunk.toml  _config.yml  about.html  astro.config.mjs  atom.xml  config.toml  flake.nix  fonts.css  index.html  main.css  package-lock.json  package.json  projects.html  robots.txt  shell.nix  sitemap.xml  style.css  wrangler.jsonc
_data/: navigation.yml
_drafts/: 2019-06-03-getting-started-MERN.md  2019-08-26-random.md  2019-08-26-tr.md  2019-08-28-tmux-notes.md  motions.md
_layouts/: posts.html  resume.html
_pages/: 404.md  about.md  archlinux.md  bash.md  category-archive.md  cheatsheets.md  docker.md  gcc.md  linux.md  markdown.md  photography.md  python.md  sed.md  sql.md  tab-archive.md  utils.md  vim.md  year-archive.md
_posts/: 2019-05-11-polytime-site-launched.md  2019-05-18-bash-backup.md  2019-05-25-bash-prompt.md  2019-05-25-vim-help.md  2019-06-02-using-main-in-python.md  2019-06-03-tmux-basics.md  2019-06-25-redis-basics.md  2019-07-27-HelidonQuickstart.md  2019-08-02-sqljoin.md  2019-12-01-this.md  2019-12-06-cpp-debugging.md  2019-mm-dd-template.md
about/: index.html
assets/: .tmux.conf
camsblog/: config.toml
content/: _index.md  about.md
photos/: index.html
posts/: index.html
project/: index.html  style.css
projects/: index.html
runner/: index.html
scripts/: install-hooks.sh  pre-commit
src/: app.rs  lib.rs
theme/: dark.css  light.css
u64-cam-nextjs/: DEPLOYMENT.md  (+3 more)
(+142 files in other folders)
